--- a/tutorials/intent-based-classification/01_intent_classification.ipynb
+++ b/tutorials/intent-based-classification/01_intent_classification.ipynb
@@ -122,7 +122,7 @@
    "source": [
     "## Live Classification\n",
     "\n",
-    "Let's classify some real queries using Claude."
+    "Let's classify some real queries using the OpenAI Responses API."
    ]
   },
   {
@@ -131,21 +131,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import anthropic\n",
+    "from openai import OpenAI\n",
     "\n",
-    "client = anthropic.Anthropic()\n",
+    "client = OpenAI()\n",
     "\n",
     "def classify_query(query: str) -> str:\n",
     "    \"\"\"Classify a query into one of our intent categories.\"\"\"\n",
-    "    response = client.messages.create(\n",
-    "        model=\"claude-sonnet-4-20250514\",  # Fast model for classification\n",
-    "        max_tokens=32,\n",
-    "        messages=[{\n",
-    "            \"role\": \"user\",\n",
-    "            \"content\": CLASSIFICATION_PROMPT.format(query=query)\n",
-    "        }]\n",
+    "    response = client.responses.create(\n",
+    "        model=\"gpt-4o-mini\",  # Fast model for classification\n",
+    "        input=CLASSIFICATION_PROMPT.format(query=query),\n",
     "    )\n",
-    "    return response.content[0].text.strip()\n",
+    "    return response.output_text.strip()\n",
     "\n",
     "# Test with different query types\n",
     "test_queries = [\n",
